I forgot to check this great piece of code

--- a/cage/Makefile
+++ b/cage/Makefile
@@ -5,3 +5,6 @@ ricdisk-magic-local:
 
 watch-ricdisk-magic-local:
 	watch bundle exec bin/ricdisk-magic .
+
+watch-ricdisk-magic-local-etc-readonly:
+	watch bundle exec bin/ricdisk-magic /etc///
