--- a/cage/Makefile
+++ b/cage/Makefile
@@ -1,10 +1,12 @@
+all:
+	gem which storazzo
+	bundle exec gem which storazzo
 
-
-ricdisk-magic-local:
+ricdisk-magic-local: all
 	bundle exec bin/ricdisk-magic .
 
-watch-ricdisk-magic-local:
+watch-ricdisk-magic-local: all
 	watch bundle exec bin/ricdisk-magic .
 
-watch-ricdisk-magic-local-etc-readonly:
+watch-ricdisk-magic-local-etc-readonly: all
 	watch bundle exec bin/ricdisk-magic /etc///
