--- a/var/test/disks/disk02-full/Rakefile
+++ b/var/test/disks/disk02-full/Rakefile
@@ -1,13 +1,15 @@
+# frozen_string_literal: true
+
 # I fell in love with this: https://stackoverflow.com/questions/9274205/rake-watch-for-changes
 
-file 'main.o' => ["main.c", "greet.h"] do
-  sh "cc -c -o main.o main.c"
+file 'main.o' => ['main.c', 'greet.h'] do
+  sh 'cc -c -o main.o main.c'
 end
 
 file 'greet.o' => ['greet.c'] do
-  sh "cc -c -o greet.o greet.c"
+  sh 'cc -c -o greet.o greet.c'
 end
 
-file "hello" => ["main.o", "greet.o"] do
-  sh "cc -o hello main.o greet.o"
+file 'hello' => ['main.o', 'greet.o'] do
+  sh 'cc -o hello main.o greet.o'
 end
